<resources>
    <string name="app_name">RidesHTTPExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="phone">Phone: </string>
    <string name="name">Name: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>

    <string name="requestbutton">Request Ride</string>
    <string name="getbutton">Get Ride</string>
    <string name="deletebutton">Delete Ride</string>

</resources>
